template-example-sfg-ec2  (1) (1).yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Creacion Ec2 para servicio sanbox

############################## Parameters ####################################################

Parameters:
  pEnvironment:
    Type: String
    AllowedValues:
      - dev
      - qa
      - pdn
    Description: Enter environment dev, qa, pdn.
    Default: dev
  
  pImportBase:
    Description: The base name of the imported objetcs
    Type: String
    Default: aw1205001-servicio-mft

  # Parametros de base de datos:
  pDataBase:
    Description: Motor de base de datos
    Type: String
  pDbUser:
    Type: String
  pDbPass:
    Type: String
    Description: "It should be less than 8 characters"

  # pPassphrase:
  #   Description: passphrase
  #   Type: String
  #   NoEcho: true
  # pUserDG:
  #   Description: user DG
  #   Type: String
  #   NoEcho: true

  # pSFTPPort:
  #   Type: Number
  #   Description: Puerto servicio SFTP.
  #   Default: 10026
  # pFTPSPort:
  #   Type: Number
  #   Description: Puerto servicio SFTP.
  #   Default: 8032
  # pCDPort:
  #   Type: Number
  #   Description: Puerto servicio SFTP.
  #   Default: 1364


############################## Mappings ####################################################
Mappings:
  mSterling:
    dev: 
      InstanceType: "t2.micro"          
      ImageId: "ami-0b0af3577fe5e3532" #Red Hat Enterprise Linux 8 
      EbsVolumeSize: 10
      EbsVolumeSize2: 10
      DisableApiTermination: "false"
      Subnet1: "subnet-03537d0e8b9cfae20" #mft-public-A 1
      Subnet2: "subnet-0f2f5b594e51d0623" #mft-public-B 1
      Subnet3: "subnet-026692b4101281cd8" #mft-private-A 2
      Subnet4: "subnet-0f2f5b594e51d0623" #mft-private-B 2
      # NlbCidrIp1: 10.104.28.0/24 # segmento Subred donde se desplegará el Nlb
      # NlbCidrIp2: AWS::NoValue
      # NlbCidrIp3: AWS::NoValue
      # NlbSFTPPort: 10026
      # NlbFTPSPort: 8032
      # NlbCDPort: 1364
      # RdsCidrIp1: 10.104.31.0/25
      # RdsCidrIp2: AWS::NoValue
      # Deploymentgroupname: "AW1205001_Sterling_ComponentesComunes"
      # DeploymentgroupPath: "/azagent" 
    qa: 
      InstanceType: "t2.micro"          
      ImageId: "ami-0b0af3577fe5e3532" #Red Hat Enterprise Linux 8 
      EbsVolumeSize: 10
      EbsVolumeSize2: 10
      DisableApiTermination: "false"
      Subnet1: "subnet-03537d0e8b9cfae20" #mft-public-A 1
      Subnet2: "subnet-0f2f5b594e51d0623" #mft-public-B 1
      Subnet3: "subnet-026692b4101281cd8" #mft-private-A 2
      Subnet4: "subnet-0f2f5b594e51d0623" #mft-private-B 2   
      
  oracle:
    dev: 
      BackupRetentionPeriod: 8
      Engine: "MySQL"
      EngineVersion: "19.0.0.0.ru-2021-01.rur-2021-01.r2"
      instanceClass: "db.t2.micro"
      MultiAZ: false              
      port: "50423"
      PreferredMaintenanceWindow: Sun:07:00-Sun:09:00
      PreferredBackupWindow: "05:00-06:00"
      Daticaluser: "CNXDATID"
      EnableCloudwatchLogsExports:
        - trace
        - audit
        - alert
        - listener
      allocatedStorage: 10
      maxAllocatedStorage: 20 
      storageType: "gp2"
      PubliclyAccessible: True
      DBName: AW1205MFTDDB

############################## Conditions ####################################################
Conditions:  
  envNoDev: !Not [ !Equals [Ref: pEnvironment, "dev"]] 
  

############################## Resources ####################################################
Resources:

############################## SG Sterling #############################################

  rSecurityGroupEc2SFG: 
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ["",[!Ref 'AWS::StackName', "-intance-public-A-sg"]] 
      GroupDescription: security group para el EC2
      SecurityGroupIngress:  
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: Allow access to the EC2 APP from CiberArk1        
      VpcId: vpc-070ca66092c150cc0   
      Tags:
        - Key: Name
          Value: !Join ["",[!Ref 'AWS::StackName', "-pruebaTag-sfg-sg"]]

# Instancia Sterling Nodo1 
  rEc2SterlingNodo1:
    Type: AWS::EC2::Instance
    Properties:
      DisableApiTermination: !FindInMap [mSterling, !Ref pEnvironment, DisableApiTermination]
      SecurityGroupIds:
        - !Ref rSecurityGroupEc2SFG     
      SubnetId: !FindInMap [mSterling, !Ref pEnvironment, Subnet3]  # >> Pilas Subnet 1 

      Monitoring: True
      InstanceType: !FindInMap [mSterling, !Ref pEnvironment, InstanceType]
      ImageId: !FindInMap [mSterling, !Ref pEnvironment, ImageId]
      #IamInstanceProfile: !Ref rEC2InstanceProfileSFG
      
      Tags:
        - Key: Name
          Value: !Join ["", [!Ref 'pImportBase',"-sfg-nodo1-priv"]]
        
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: !FindInMap [mSterling, !Ref pEnvironment, EbsVolumeSize]
      #UserData:
      # 
      # Nombre de la maquina

# Instancia Sterling Nodo2
  rEc2PSNodo1:
    Type: AWS::EC2::Instance

  # Condition: envNoDev  # >> depende del ambiente
    Properties:
      DisableApiTermination: !FindInMap [mSterling, !Ref pEnvironment, DisableApiTermination]
      SecurityGroupIds:
        - !Ref rSecurityGroupEc2SFG
      SubnetId: !FindInMap [mSterling, !Ref pEnvironment, Subnet1]  # >> Pilas Subnet 1
    
      Monitoring: True
      InstanceType: !FindInMap [mSterling, !Ref pEnvironment, InstanceType]
      ImageId: !FindInMap [mSterling, !Ref pEnvironment, ImageId]
      # IamInstanceProfile: !Ref rEC2InstanceProfileSFG
      
      Tags:
        - Key: Name
          Value: !Join ["", [!Ref 'pImportBase',"-ps-nodo1-pub"]]
        
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: !FindInMap [mSterling, !Ref pEnvironment, EbsVolumeSize]
      #UserData:
      # 
      # Nombre de la maquina h

############################## SG DB ####################################################
  rSubnetGroupRDS:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: 
        Fn::Join: ["-", [Ref: 'AWS::StackName' , "subnetgroup"]]
      DBSubnetGroupName: 
        Fn::Join: ["-", [Ref: 'AWS::StackName' , "subnetgroup"]]
      SubnetId: !FindInMap [mSterling, !Ref pEnvironment, Subnet4]  # >> Pilas Subnet 4
      Tags:
        - Key: Name
          Value: 
            Fn::Join: ["-", [Ref: 'AWS::StackName' , "subnetgroup"]]
  
  rDBSecurityGroupsDBA: 
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ["",[!Ref 'AWS::StackName', "-sg-DBA"]] 
      GroupDescription: Grupo de securidad para la instancia de base de datos.
      SecurityGroupIngress:  
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
          Description: Allow access to the  APP from CiberArk1        
      VpcId: vpc-070ca66092c150cc0   
      Tags:
        - Key: Name
          Value: !Join ["",[!Ref 'AWS::StackName', "-pruebaDBATag-sfg-sg"]]
  
  rSQLShackDemoDbInstance:
      Type: AWS::RDS::DBInstance
      Properties:
        #DBName: !Ref pDbName
        DBName:
          Fn::FindInMap:
            - Ref: pDataBase
            - Ref: pEnvironment
            - DBName
        MasterUsername: !Ref pDbUser
        MasterUserPassword: !Ref pDbPass
        #Engine: MySQL
        Engine:
          Fn::FindInMap:
            - Ref: pDataBase
            - Ref: pEnvironment
            - Engine
        DBInstanceIdentifier: 
          Fn::Join: [ "-", [Ref: pImportBase, "-sfg-rds"] ]
        DBInstanceClass: db.t2.micro
        StorageType: gp2
        PubliclyAccessible: True
        AllocatedStorage: "20"
        #DBInstanceIdentifier: !Join ["-", [ "rSQLShackDemoDbInstance", !Ref "AWS::Region" ]]
        #AvailabilityZone: !Select [1, !GetAZs ""]
        VPCSecurityGroups: 
          - Ref: rDBSecurityGroupsDBA
